Changes from jTDS 1.0.2
=======================

03/14/2005 - Alin Sinpalean
 o Applied Mike's additional fix to bug [1158509] Various problems with
   connect/login timeouts.

03/12/2005 - Mike Hutchinson
 o Small change to ConnectionJDBC2 to ensure that the server character set is
   used if none is specified by the user.
 o TdsCore.closeConnection() has been modified to set a 10 second timeout on
   the socket. This should address bug report [1161601] Connection.close() can
   take a long time when Sybase down.
 o TdsData and TdsCore have been modified to address bug [1161609] Text or
   image data truncated on Sybase 12.5. A new TDS 5 data type (0x24) is used to
   send bulk text or image data to the server.
 o A small bug has been corrected in Support.substituteParameters which caused
   short InputStreams to be written as a binary parameter rather than text when
   running with Sybase 11.

03/12/2005 - Alin Sinpalean
 o Added a fix suggested by rtdog to TimerThread.

03/09/2005 - Alin Sinpalean
 o Corrected bug [1158509] Various problems with connect/login timeouts. The
   last problem fixed was concerned with socket connection not timing out (only
   the login itself was timed and interrupted).
 o Applied patch [1155902] Implement parameter meta data retrieval, by Oded
   Arbel. Parameter mode was always returning parameterModeUnknown; now mode
   is determined based on actual parameters.

03/07/2005 - Alin Sinpalean
 o Partially fixed bug [1158509] Various problems with connect/login timeouts.
   FAQ was inexact (stated that loginTimeout was in milliseconds) and
   DriverManager login timeout was ignored because the default values (0 for
   login timeout) were set before the null check.

03/06/2005 - Alin Sinpalean
 o Applied a patch from Mike with a cleaner batch implementation.

03/04/2005 - Alin Sinpalean
 o Added an extra concurrency test, which runs two Statements in parallel: one