@@ -218,6 +218,9 @@
         <dt><code>progName</code> (default - <code>&quot;jTDS&quot;</code>)</dt>
         <dd>Client library name. No practical use, it's displayed by Enterprise
           Manager or Profiler associated with the connection.</dd>
+        <dt><code>wsid</code> (default - the client host name)</dt>
+        <dd>Workstation ID. No practical use, it's displayed by Enterprise
+          Manager or Profiler associated with the connection.</dd>
         <dt><code>macAddress</code> (default - <code>"000000000000"</code>)</dt>
         <dd>Network interface card MAC address. It's displayed by Enterprise
           Manager or Profiler associated with the connection and is needed to
