@@ -24,6 +24,7 @@ prop.tcpnodelay=TCPNODELAY
 prop.tds=TDS
 prop.user=USER
 prop.useunicode=SENDSTRINGPARAMETERSASUNICODE
+prop.wsid=WSID
 prop.xaemulation=XAEMULATION
 
 prop.desc.appname=The application name advertised by the driver.
@@ -52,6 +53,7 @@ prop.desc.tcpnodelay=Enable/disable TCP_NODELAY
 prop.desc.tds=The database server protocol.
 prop.desc.user=The database user.
 prop.desc.useunicode=If strings should be sent as unicode values.
+prop.desc.wsid=Workstation ID or client host name override. Will be stored in master.dbo.sysprocesses, column hostname.
 prop.desc.xaemulation=Set to false to use the Microsoft Distributed Transaction Coordinator.
 
 error.baddatatype=The TDS protocol does not support JDBC datatype {0}.
